# openApi/oapiServer.gen.go
@@ -1,0 +1,135 @@
+// Package Openapi provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
+package Openapi
+
+import (
+	"fmt"
+	"net/http"
+
+	externalRef0 "SeptimanappBackend/database"
+
+	"github.com/deepmap/oapi-codegen/pkg/runtime"
+	"github.com/labstack/echo/v4"
+)
+
+// GetEventsParams defines parameters for GetEvents.
+type GetEventsParams struct {
+
+	// if given only events of this year are returned
+	Year *int `json:"year,omitempty"`
+
+	// if given only events in this language are returned
+	Lang *GetEventsParamsLang `json:"lang,omitempty"`
+}
+
+// GetEventsParamsLang defines parameters for GetEvents.
+type GetEventsParamsLang string
+
+// PostEventsJSONBody defines parameters for PostEvents.
+type PostEventsJSONBody externalRef0.Event
+
+// PostEventsJSONRequestBody defines body for PostEvents for application/json ContentType.
+type PostEventsJSONRequestBody PostEventsJSONBody
+
+// ServerInterface represents all server handlers.
+type ServerInterface interface {
+
+	// (GET /events)
+	GetEvents(ctx echo.Context, params GetEventsParams) error
+
+	// (POST /events)
+	PostEvents(ctx echo.Context) error
+
+	// (GET /events/{id})
+	GetEventsId(ctx echo.Context, id int) error
+}
+
+// ServerInterfaceWrapper converts echo contexts to parameters.
+type ServerInterfaceWrapper struct {
+	Handler ServerInterface
+}
+
+// GetEvents converts echo context to params.
+func (w *ServerInterfaceWrapper) GetEvents(ctx echo.Context) error {
+	var err error
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params GetEventsParams
+	// ------------- Optional query parameter "year" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "year", ctx.QueryParams(), &params.Year)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter year: %s", err))
+	}
+
+	// ------------- Optional query parameter "lang" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "lang", ctx.QueryParams(), &params.Lang)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter lang: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.GetEvents(ctx, params)
+	return err
+}
+
+// PostEvents converts echo context to params.
+func (w *ServerInterfaceWrapper) PostEvents(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.PostEvents(ctx)
+	return err
+}
+
+// GetEventsId converts echo context to params.
+func (w *ServerInterfaceWrapper) GetEventsId(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id int
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "id", runtime.ParamLocationPath, ctx.Param("id"), &id)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.GetEventsId(ctx, id)
+	return err
+}
+
+// This is a simple interface which specifies echo.Route addition functions which
+// are present on both echo.Echo and echo.Group, since we want to allow using
+// either of them for path registration
+type EchoRouter interface {
+	CONNECT(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	DELETE(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	GET(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	HEAD(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	OPTIONS(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	PATCH(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	POST(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	PUT(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	TRACE(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+}
+
+// RegisterHandlers adds each server route to the EchoRouter.
+func RegisterHandlers(router EchoRouter, si ServerInterface) {
+	RegisterHandlersWithBaseURL(router, si, "")
+}
+
+// Registers handlers, and prepends BaseURL to the paths, so that the paths
+// can be served under a prefix.
+func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL string) {
+
+	wrapper := ServerInterfaceWrapper{
+		Handler: si,
+	}
+
+	router.GET(baseURL+"/events", wrapper.GetEvents)
+	router.POST(baseURL+"/events", wrapper.PostEvents)
+	router.GET(baseURL+"/events/:id", wrapper.GetEventsId)
+
+}
